This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: zlib (de)compressobj copy() method missing on Windows
Type: behavior Stage: resolved
Components: Library (Lib), Windows Versions: Python 3.2, Python 3.3, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: nadeem.vawda Nosy List: Simon.Elén, loewis, nadeem.vawda, python-dev
Priority: normal Keywords:

Created on 2011-10-16 21:29 by Simon.Elén, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (4)
msg145644 - (view) Author: Simon Elén (Simon.Elén) Date: 2011-10-16 21:29
The zlib (de)compressobj copy() method is missing on Windows.

Tested on Python 2.7.2 and 3.2.2 Windows binaries. I have not tried to build from source.

(In the source code I can see a check for HAVE_ZLIB_COPY. Does the Windows binaries statically link the included zlib source? If so, it should be new enough to pass that check...)
msg145648 - (view) Author: Nadeem Vawda (nadeem.vawda) * (Python committer) Date: 2011-10-16 21:47
Confirmed for 3.3. I should be able to post a patch tomorrow.
msg145742 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2011-10-17 17:41
New changeset 80f07777accd by Nadeem Vawda in branch '2.7':
Issue #13194: zlib.compressobj().copy() and zlib.decompressobj().copy() are now available on Windows.
http://hg.python.org/cpython/rev/80f07777accd

New changeset fc7ee478ed3b by Nadeem Vawda in branch '3.2':
Issue #13194: zlib.compressobj().copy() and zlib.decompressobj().copy() are now available on Windows.
http://hg.python.org/cpython/rev/fc7ee478ed3b

New changeset 80de33021488 by Nadeem Vawda in branch 'default':
Merge #13194: zlib.compressobj().copy() and zlib.decompressobj().copy() are now available on Windows.
http://hg.python.org/cpython/rev/80de33021488
msg145765 - (view) Author: Nadeem Vawda (nadeem.vawda) * (Python committer) Date: 2011-10-17 22:41
Fixed for 2.7, 3.2 and 3.3. Thanks for the bug report!
History
Date User Action Args
2022-04-11 14:57:22adminsetgithub: 57403
2011-10-17 22:41:27nadeem.vawdasetstatus: open -> closed
resolution: fixed
messages: + msg145765

stage: resolved
2011-10-17 17:41:21python-devsetnosy: + python-dev
messages: + msg145742
2011-10-16 21:47:56nadeem.vawdasetassignee: nadeem.vawda
messages: + msg145648
2011-10-16 21:42:11pitrousetnosy: + loewis, nadeem.vawda

versions: + Python 3.3
2011-10-16 21:29:39Simon.Eléncreate