Issue #13194: zlib.compressobj().copy() and zlib.decompressobj().copy() are now available on Windows.