PC/pyconfig.h
@@ -648,6 +648,9 @@ Py_NO_ENABLE_SHARED to find out.  Also support MS_NO_COREDLL for b/w compat */
 #define HAVE_WCSXFRM 1
 #endif
 
+/* Define if the zlib library has inflateCopy */
+#define HAVE_ZLIB_COPY 1
+
 /* Define if you have the <dlfcn.h> header file.  */
 /* #undef HAVE_DLFCN_H */
 
